<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateTask">

    <TextView
            android:text="@string/create_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_createTask"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_taskName"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_createTask" android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" android:hint="@string/name" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/emlt_description"
            app:layout_constraintTop_toBottomOf="@+id/et_taskName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" android:hint="@string/description" android:autofillHints=""/>
    <CheckBox
            android:text="@string/important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cb_isImportant"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emlt_description" android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"/>
    <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>