<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/your_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_yourTasks"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/delete_all"
            android:layout_width="150dp"
            android:layout_height="wrap_content" android:id="@+id/btn_deleteAll"
            app:layout_constraintEnd_toStartOf="@+id/btn_addNewTask"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintTop_toBottomOf="@+id/lv_allTasks" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/add_new_task"
            android:layout_width="150dp"
            android:layout_height="wrap_content" android:id="@+id/btn_addNewTask"
            app:layout_constraintTop_toTopOf="@+id/btn_deleteAll" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_deleteAll"
    />
    <ListView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_yourTasks" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/lv_allTasks"/>
</androidx.constraintlayout.widget.ConstraintLayout>